    configuration options.
  * Add a "View Source" tab to allow users who do not have permission to edit
    a topic to view its wiki markup.
  * Add a "Filter search results by namespace" option to the search page.
  * Add the ability for sysadmins to permanently delete topic versions from the
    Special:Manage page.
  * Enable DBCP prepared statement pooling to improve performance.
  * Remove ability to automatically upgrade from versions prior to 0.9.0.
  * Improve search performance, exclude redirects from search indexing, and
    weight topic names more heavily than topic content to improve accuracy.
    Existing JAMWiki installs should rebuild their search index using the
    tools on the Special:Maintenance page.
  * Add support for the universal edit button plugin.  See 
    http://universaleditbutton.org for further details.
  * Add RankingAlgorithm search engine support (nnagarajayya).
  * Limit the number of recent changes loaded by the "Reload Recent Changes"
    task on the Special:Maintenance page to improve performance.
  * Upgrade to Lucene Search 3.2.
  * Upgrade to Ehcache 2.4.2.
  * Upgrade to commons-codec 1.5.
  * Upgrade to commons-pool 1.5.6.

Bugfixes:

  * Interwiki link CSS should match internal link CSS, not external link CSS,
    and if no link text is specified the default text should display the
    interwiki prefix.  Reported by floatingworld.
  * Fix category redirects of the form "#REDIRECT [[Category:Example]]".

Translation Updates:

  * Updated German translations (axelclk).
  * Updated Russian translations (shar).


1.0.4
=====

New Features:

  * None.

Bugfixes:

  * Fix a template parser issue when parsing content of the form
    "{{{{PAGENAME}}/info}}".  Reported by Felipe Avilis.
  * PDFs and other non-image files in the "Image:" namespace were not appearing
    on Special:AllPages.  Reported by Felipe Avilis.

Translation Updates:

  * Updated Polish translations (dlpa).


1.0.3
=====

New Features:

  * None.

Bugfixes:
