@@ -402,6 +402,7 @@ manage.caption.purgeconfirm=Are you sure you want to delete the version(s)?  Thi
 manage.caption.purgeselect=Select version(s) to delete
 manage.caption.readonly=Read-Only
 manage.caption.undelete=Un-Delete {0}
+manage.caption.undeleterevisions=Show/Hide Deleted Revisions
 manage.delete.commentspage=Delete associated comments page
 manage.delete.reason=Reason for deletion
 manage.delete.warning=<b>WARNING</b>\: Deleting an article or image removes it from the system.  Please confirm that you intend to delete this item and that it is being done in accordance with policy.
